# sid-vcs

./: LICENSE  README.md  pyproject.toml
.sid/refs/heads/: master
sid/: cli.py  index.py  objects.py  repo.py
sid.egg-info/: PKG-INFO  SOURCES.txt
sid_vcs.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_workflow.py
