[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sid-vcs"
version = "0.1.0"
description = "A minimal Git-like version control system"
authors = [{ name = "Siddhant", email = "siddhantgangawane335@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
sid = "sid.cli:main"
