[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sid-vcs"
version = "0.2.0"
description = "SID — an educational Git-like VCS"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Siddhant Gangawane", email = "siddhantgangawane335@email.com" }
]

[project.scripts]
sid = "sid.cli:main"
